layout bug fix

--- a/src/app/privateform/private-form.component.scss
+++ b/src/app/privateform/private-form.component.scss
@@ -1,19 +1,19 @@
 @import '~@angular/material/theming';
 
-@mixin app-all-information-list-theme($theme) {
+@mixin app-private-form-theme($theme) {
   $primary: map_get($theme, primary);
   $accent: map_get($theme, accent);
   $warn: map_get($theme, warn);
   $foreground: map_get($theme, foreground);
   $background: map_get($theme, background);
 
-  app-all-information-list {
-    .background {
-      background-color: mat-color($background, app-bar);
+  app-privateform {
+    .text-color {
+      color:  mat-color($primary);
     }
 
-    .text-color {
-      color: mat-color($primary) !important;;
+    .button-calculate {
+      background-color: mat-color($primary, A100);
     }
 
   }
